# artemis

./: .env  .gitignore  README.md  artemis.py  artemis_cli.py  artemis_refactoring.py  azure_resources.py  azure_resources_via_arm_api.xlsx  create_db.py  emoji.py  id_to_prodnames.csv  licenses.json  my_excel_file_user_auth.xlsx  pyproject.toml  read_file.py  requirements.txt  test_branch.py  test_db.py  test_excel.py  unit_test_licenses.py
artemis/: .env  artemis.db  artemis.py
artemis/source/: the_googd_one_v1.xlsx
source/: template_entraid.xlsx
