[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis-cli"
version = "0.1.3"
description = "A CLI for managing resources and fetching data."
authors = [
    { name = "Tommaso Maria Ungetti", email = "tommaso.ungetti@outlook.com" }
]
readme = "README.md"
license = { text = "GPL" }
dependencies = [
    "click",
    "azure-identity",
    "azure-mgmt-resource",
    "requests",
]

[project.scripts]
artemis = "artemis.artemis:cli"

[tool.setuptools.package-data]
# Include the database file and other necessary assets
artemis = ["artemis.db"]

[tool.setuptools]
include-package-data = true
