[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artemis-cli"
version = "1.0.0"
description = "Artemis is a versatile command-line tool designed to interact with Microsoft Azure and Microsoft Entra ID."
authors = [
    { name = "Tommaso Maria Ungetti", email = "tommaso.ungetti@outlook.com" }
]
readme = "README.md"
license = { text = "GPL" }
dependencies = [
    "click",
    "azure-identity",
    "requests",
    "setuptools",
]

[project.scripts]
artemis = "artemis.artemis:cli"

[tool.setuptools.package-data]
artemis = ["artemis.db"]

[tool.setuptools]
include-package-data = true
